--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "{{ name }}",
-  "description": "{{ description }}",
+  "name": "<%=projectName%>",
+  "description": "<%=projectName%>",
   "version": "0.1.0",
   "private": true,
-  "main": "index.js",
+  "main": "src/foo.vue",
   "keywords": [
     "weex",
     "vue"
